--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
   "devDependencies": {
     "chai": "^4.3.4",
     "mocha": "^9.1.0"
+  },
+  "dependencies": {
+    "my-package": "0.0.0"
   }
 }
